# raiju-qpc

./: .blinky_console  .clang-format  .gitignore  .sumo_hsm  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  Makefile_new  Makefile_old  README.md  blinky.c  blinky_console.qm  bsp.c  bsp.h  config.mk  config_substitute.mk  main.c  params.txt  sumo_hsm.c  sumo_hsm.qm  toolchain_gcc.cmake  toolchain_stm32.cmake
.devcontainer/: devcontainer.json
build_spy/: blinky
cube/: .mxproject  STM32F103RFTx_FLASH.ld  cube.ioc  raiju.ioc
cube/Inc/: main.h  stm32f1xx_it.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  tim.h
cube/STM32F103RCT6/: .mxproject  raiju_substitute.ioc  stm32f103rctx_flash.ld
cube/STM32F103RCT6/Inc/: stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
cube/STM32F103RCT6/Middlewares/ST/STM32_MotionGC_Library/: LICENSE.txt
cube/STM32F103RCT6/Middlewares/ST/STM32_MotionGC_Library/Inc/: motion_gc.h
cube/STM32F103RCT6/Src/: adc.c  cube_main.c  dma.c  gpio.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
cube/STM32F103RFT6/: .mxproject  Makefile  raiju.ioc  stm32f103rftx_flash.ld
cube/STM32F103RFT6/Drivers/STM32F1xx_HAL_Driver/Inc/: stm32f1xx_ll_i2c.h
cube/STM32F103RFT6/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_i2c.c
cube/STM32F103RFT6/Inc/: main.h  stm32f1xx_it.h  tim.h  usart.h
cube/STM32F103RFT6/Middlewares/ST/STM32_MotionGC_Library/: LICENSE.txt
cube/STM32F103RFT6/Src/: adc.c  cube_main.c  dma.c  gpio.c  i2c.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c  usart.c
cube/Src/: adc.c  cube_main.c  dma.c  gpio.c  stm32f1xx_it.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
inc/: bsp.h  bsp_buzzer.h  bsp_dist_sensors.h  bsp_led.h  bsp_line_sensors.h  custom_strategy.h  lsm6dsr.h  lsm6dsr_reg.h  parameters.h  parameters_set.h  pid.h  pre_strategies.h  radio_crsf.h  signals.h  utils.h
inc/bsp/: bsp.h  bsp_adc_dma.h  bsp_ble.h  bsp_buzzer.h  bsp_crc.h  bsp_dist_sensor.h  bsp_eeprom.h  bsp_gpio.h  bsp_i2c.h  bsp_motors.h  bsp_ppm.h  bsp_radio.h  bsp_tim_input_capture.h  bsp_timer_input.h  bsp_uart.h  bsp_uart_crsf.h  bsp_uart_radio.h  bsp_ws2812.h
inc/bsp/target-pc/: bsp_adc_fake.h  bsp_gpio_fake.h  bsp_gpio_mapping.h  bsp_uart_fake.h  fake_start_module.h  motion_fx.h  motion_gc.h  qs_defines.h
inc/bsp/target-stm32f103/: bsp_gpio_mapping.h  bsp_system_interrupts.h  eeprom.h  qf_custom_defines.h
inc/services/: adc_service.h  ble_service.h  distance_service.h  imu_service.h  led_service.h  line_service.h  logger.h  navigation.h  radio_service.h  start_module.h  start_module_ao.h
inc/target-pc/: qs_defines.h
qview/: led_stripe.py  simulator.py  simulator_base.py  simulator_complete.py  simulator_custom.py
qview/ble_server/: app.py  ble.py  ble_server.py
scripts/: .cube  build.sh  cube.sh  data.txt  plot_control.py  prepare-cube.sh  prepare_cube.sh  qm.sh
src/: app.c  custom_strategy.c  lsm6dsr.c  lsm6dsr_reg.c  main.c  parameters.c  parameters_set.c  pid.c  radio_crsf.c  sumo_hsm.c
src/bsp/target-pc/: bsp.c  bsp_adc_dma.c  bsp_ble.c  bsp_buzzer.c  bsp_crc.c  bsp_dist_sensor.c  bsp_dist_sensors.c  bsp_eeprom.c  bsp_gpio.c  bsp_i2c.c  bsp_led.c  bsp_motors.c  bsp_ppm.c  bsp_radio.c  bsp_tim_input_capture.c  bsp_uart.c  bsp_uart_crsf.c  bsp_uart_radio.c  bsp_ws2812.c  fake_motion_fx_lib.c  fake_motion_gc_lib.c
src/bsp/target-stm32f103/: bsp.c  bsp_adc.c  bsp_adc_dma.c  bsp_ble.c  bsp_buzzer.c  bsp_crc.c  bsp_dist_sensor.c  bsp_dist_sensors.c  bsp_eeprom.c  bsp_gpio.c  bsp_i2c.c  bsp_led.c  bsp_line_sensors.c  bsp_motors.c  bsp_ppm.c  bsp_radio.c  bsp_system_interrupts.c  bsp_tim_input_capture.c  bsp_timer_input.c  bsp_uart.c  bsp_uart_crsf.c  bsp_uart_radio.c  bsp_ws2812.c  eeprom.c
src/services/: adc_service.c  ble_service.c  button.c  buzzer_service.c  distance_service.c  driving_service.c  imu_service.c  led_service.c  line_service.c  logger.c  navigation.c  radio_service.c  start_module.c  start_module_ao.c
src/target-pc/: bsp.c  bsp_buzzer.c  bsp_dist_sensors.c  bsp_led.c  bsp_line_sensors.c  bsp_motors.c  bsp_radio.c
src/target-stm32f103/: bsp_buzzer.c  bsp_led.c
src/target-stm32g0/: bsp.c  bsp_led.c
target-pc/: bsp.c
target-stm32g0/: bsp.c  bsp.h
